# Aerith

./: .gitignore  CMakeLists.txt  README.md  Transform.cpp  play.cpp  reformat.sh
DEV/: CMakeLists.txt  OPs.hpp  analyzeTemplateSpecialization4Func.cpp
google_test/: CMakeLists.txt  test_Analyzer.cpp
google_test/code_pool/: 1.cpp
include/: AnalyzeResult.hpp  Analyzer.hpp  Analyzers.hpp  Config.hpp  Mutators.hpp  Utils.hpp
pool/: 1.cpp
src/: Add1stConcept.cpp  Add1stTrivialConcept.cpp  AddTrivialConcept.cpp  AnalyzeConceptName.cpp  AnalyzeExistingConcepts.cpp  Utils.cpp
src/Analyzer/: AnalyzeExistingConcepts.cpp  AnalyzeExistingFunctions.cpp
src/Mutator/: Add1stTrivialConcept.cpp  AddTrivialConcept.cpp  AddTrivialTemplate.cpp
tests/: 1.cpp  CMakeLists.txt  test_Add1stConcept.cpp  test_AddTrivialConcept.cpp  test_Analyzer.cpp  test_DEV.cpp  test_Mutator.cpp
tests/code_pool/: 1.cpp  2.cpp  3.cpp
